[package]
name = "inline-doc"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Embed markdown/text files as documentation"
repository = "https://github.com/RobertasJ/inline-doc"
readme = "README.md"
keywords = ["doc"]

[lib]
proc-macro = true

[dependencies]
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"
